# sfcrimepredict

./: LICENSE  Makefile  README.md  pyproject.toml  report.md  requirements.txt
notebooks/: README.md  SF_crime_prediction.ipynb  eda_for_SfCrime.ipynb  working_on_flight_data.ipynb  working_on_weather_data.ipynb
sf_crime_prediction/: __init__.py  dataset.py  features.py  plots.py
sf_crime_prediction/modeling/: predict.py  train.py
