[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sf_crime_prediction"
version = "0.0.1"
description = "he primary objective of this project is to develop a predictive model that accurately forecasts crime occurrences based on specific locations within the city. By leveraging advanced machine learning techniques and extensive historical crime data, this project aims to provide valuable insights into crime patterns and trends, contributing to enhanced public safety and resource allocation."
authors = [
  { name = "Emre Yuce" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.9.7"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["sf_crime_prediction"]
force_sort_within_sections = true
